[gd_scene load_steps=31 format=3 uid="uid://euhmy40ljoc4"]

[ext_resource type="Script" path="res://scenes/gui/hud/hud.gd" id="1_8mkb2"]
[ext_resource type="Texture2D" uid="uid://k473ttvmslg8" path="res://assets/images/gui/hud/ammo_bar.png" id="3_amodr"]
[ext_resource type="Texture2D" uid="uid://bnnkaais57byp" path="res://assets/images/gui/hud/ammo_bar_under.png" id="3_bujad"]
[ext_resource type="Texture2D" uid="uid://cw8qtdr0bp1af" path="res://assets/images/player_icons/player_icon_temp.png" id="3_lsk7v"]
[ext_resource type="Script" path="res://scenes/gui/hud/score_display.gd" id="4_0pm5a"]
[ext_resource type="Script" path="res://scenes/gui/hud/crosshairs.gd" id="4_nbuwc"]
[ext_resource type="PackedScene" uid="uid://ooxxqxmb5cvk" path="res://scenes/gui/hud/inventory_slot.tscn" id="5_ojg8h"]
[ext_resource type="Texture2D" uid="uid://dtci8deq2uxjc" path="res://assets/images/gui/hud/player_status.png" id="6_4gxcm"]
[ext_resource type="Texture2D" uid="uid://die8f8s7a6i8a" path="res://assets/images/round_won_icon.png" id="6_mlg6x"]
[ext_resource type="Script" path="res://scenes/gui/hud/bubble_shield_bar.gd" id="6_ntse7"]
[ext_resource type="Texture2D" uid="uid://choc1obf6wea5" path="res://assets/images/round_lost_icon.png" id="7_oxhew"]
[ext_resource type="Texture2D" uid="uid://d25nardc5u28k" path="res://assets/images/gui/hud/score_display.png" id="7_qrrh1"]
[ext_resource type="FontFile" uid="uid://dccbh8rq1t0nw" path="res://assets/fonts/Super Lobster.ttf" id="9_qm6eq"]
[ext_resource type="Texture2D" uid="uid://degh03aj62hel" path="res://assets/images/keys/Dark/Shift-Key.png" id="14_xb7in"]
[ext_resource type="Texture2D" uid="uid://ch3c2t8p3mdcu" path="res://assets/images/keys/Dark/E-Key.png" id="15_hscai"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8k04s"]
bg_color = Color(0.565344, 0.60005, 0.683188, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlp8s"]
atlas = ExtResource("6_4gxcm")
region = Rect2(0, 500, 2048, 165)

[sub_resource type="AtlasTexture" id="AtlasTexture_k2bl0"]
atlas = ExtResource("6_4gxcm")
region = Rect2(0, 0, 2048, 165)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xd04"]
atlas = ExtResource("6_4gxcm")
region = Rect2(0, 665, 2048, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_5dafj"]
atlas = ExtResource("6_4gxcm")
region = Rect2(0, 165, 2048, 300)

[sub_resource type="AtlasTexture" id="AtlasTexture_oyiw1"]
atlas = ExtResource("7_qrrh1")
region = Rect2(155, 0, 1738.79, 110)

[sub_resource type="Theme" id="Theme_d3fyj"]
Label/font_sizes/font_size = 48
Label/fonts/font = ExtResource("9_qm6eq")

[sub_resource type="AtlasTexture" id="AtlasTexture_xcc8n"]
atlas = ExtResource("7_qrrh1")
region = Rect2(540, 105, 967.917, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxi0u"]
atlas = ExtResource("7_qrrh1")
region = Rect2(540, 215, 967.917, 115)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj5pr"]
atlas = ExtResource("7_qrrh1")
region = Rect2(540, 325, 967.917, 115)

[sub_resource type="Gradient" id="Gradient_gvxgr"]
offsets = PackedFloat32Array(0.532468, 1)
colors = PackedColorArray(1, 1, 1, 0, 1, 0, 0, 0.470588)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4mih1"]
gradient = SubResource("Gradient_gvxgr")
fill = 1
fill_from = Vector2(0.5, 0.5)

[sub_resource type="Animation" id="Animation_dv2xh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_r8wlt"]
resource_name = "low_health_show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(-0.0333333, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_caxpl"]
_data = {
"RESET": SubResource("Animation_dv2xh"),
"low_health_show": SubResource("Animation_r8wlt")
}

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8mkb2")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.461
anchor_top = 0.431
anchor_right = 0.539
anchor_bottom = 0.569
offset_left = -0.0800171
offset_top = -0.320007
offset_right = 0.0799561
offset_bottom = 0.320007
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)

[node name="AmmoAmountBar" type="TextureProgressBar" parent="AspectRatioContainer"]
layout_mode = 2
max_value = 1.0
step = 0.01
value = 1.0
fill_mode = 5
radial_initial_angle = 140.8
radial_fill_degrees = 72.0
nine_patch_stretch = true
texture_under = ExtResource("3_bujad")
texture_progress = ExtResource("3_amodr")

[node name="Crosshairs" type="Control" parent="AspectRatioContainer"]
layout_mode = 2
script = ExtResource("4_nbuwc")

[node name="PlayerStatus" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(240, 40)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0132813
anchor_top = 0.880556
anchor_right = 0.265
anchor_bottom = 1.0
offset_top = -6.10352e-05
offset_right = -0.200012
grow_vertical = 0
theme_override_constants/separation = 14
metadata/_edit_use_anchors_ = true

[node name="PlayerIcon" type="TextureRect" parent="PlayerStatus"]
visible = false
layout_mode = 2
texture = ExtResource("3_lsk7v")
expand_mode = 2
stretch_mode = 4

[node name="MarginAdjuster" type="Control" parent="PlayerStatus"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BarVBoxContainer" type="VBoxContainer" parent="PlayerStatus/MarginAdjuster"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="BubbleShieldBar" type="ProgressBar" parent="PlayerStatus/MarginAdjuster/BarVBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_8k04s")
max_value = 1.0
value = 1.0
show_percentage = false
script = ExtResource("6_ntse7")

[node name="DashBar" type="TextureProgressBar" parent="PlayerStatus/MarginAdjuster/BarVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
max_value = 1.0
step = 0.01
value = 1.0
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_xlp8s")
texture_progress = SubResource("AtlasTexture_k2bl0")

[node name="HealthBar" type="TextureProgressBar" parent="PlayerStatus/MarginAdjuster/BarVBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.89
max_value = 1.0
step = 0.01
value = 0.95
nine_patch_stretch = true
texture_under = SubResource("AtlasTexture_4xd04")
texture_progress = SubResource("AtlasTexture_5dafj")

[node name="ScoreDisplay" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.179688
anchor_right = 0.819531
anchor_bottom = 0.0777778
grow_horizontal = 2
texture = SubResource("AtlasTexture_oyiw1")
expand_mode = 1
script = ExtResource("4_0pm5a")
metadata/_edit_use_anchors_ = true

[node name="LabelHBoxContainer" type="HBoxContainer" parent="ScoreDisplay"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.941176
grow_horizontal = 2
grow_vertical = 2
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="P1ScoreContainer" type="Control" parent="ScoreDisplay/LabelHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="P1ScoreLabel" type="Label" parent="ScoreDisplay/LabelHBoxContainer/P1ScoreContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.801
offset_top = -5.0
offset_bottom = 5.368
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = SubResource("Theme_d3fyj")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreBars" type="Control" parent="ScoreDisplay/LabelHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.6

[node name="P1ScoreBar" type="TextureProgressBar" parent="ScoreDisplay/LabelHBoxContainer/ScoreBars"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_right = 0.975
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.6
max_value = 9.0
nine_patch_stretch = true
texture_over = SubResource("AtlasTexture_xcc8n")
texture_progress = SubResource("AtlasTexture_mxi0u")
metadata/_edit_use_anchors_ = true

[node name="P2ScoreBar" type="TextureProgressBar" parent="ScoreDisplay/LabelHBoxContainer/ScoreBars"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_right = 0.975
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.6
max_value = 9.0
fill_mode = 1
nine_patch_stretch = true
texture_over = SubResource("AtlasTexture_xcc8n")
texture_progress = SubResource("AtlasTexture_yj5pr")

[node name="P2ScoreContainer" type="Control" parent="ScoreDisplay/LabelHBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="P2ScoreLabel" type="Label" parent="ScoreDisplay/LabelHBoxContainer/P2ScoreContainer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.801
offset_top = -5.0
offset_bottom = 5.368
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme = SubResource("Theme_d3fyj")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EffectsDisplay" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.797656
anchor_top = 0.573611
anchor_right = 0.914844
anchor_bottom = 0.969444
grow_horizontal = 0
grow_vertical = 0
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="Inventory" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.914438
anchor_top = 0.550278
anchor_right = 0.999844
anchor_bottom = 1.00044
offset_left = 0.519897
offset_top = -0.200012
offset_right = 0.199951
offset_bottom = -0.320068
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/separation = 0
alignment = 2
metadata/_edit_use_anchors_ = true

[node name="InventorySlot1" parent="Inventory" instance=ExtResource("5_ojg8h")]
layout_mode = 2

[node name="InventorySlot2" parent="Inventory" instance=ExtResource("5_ojg8h")]
layout_mode = 2

[node name="InventorySlot3" parent="Inventory" instance=ExtResource("5_ojg8h")]
layout_mode = 2

[node name="LowHealthTexture" type="TextureRect" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_4mih1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="LowHealthTexture"]
libraries = {
"": SubResource("AnimationLibrary_caxpl")
}

[node name="RoundWonIcon" type="TextureRect" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -195.0
offset_right = 195.0
offset_bottom = 195.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_mlg6x")

[node name="RoundLostIcon" type="TextureRect" parent="."]
visible = false
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -202.0
offset_top = -202.0
offset_right = 202.0
offset_bottom = 202.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_oxhew")

[node name="ShiftKey" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.266406
anchor_top = 0.887111
anchor_right = 0.304031
anchor_bottom = 0.920833
offset_top = 0.279968
offset_right = -0.160004
grow_vertical = 0
texture = ExtResource("14_xb7in")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true

[node name="EKey" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.446094
anchor_top = 0.469444
anchor_right = 0.470844
anchor_bottom = 0.529611
offset_right = 0.32
offset_bottom = -0.32
texture = ExtResource("15_hscai")
expand_mode = 1
stretch_mode = 5
metadata/_edit_use_anchors_ = true
